--- a/extension/package.json
+++ b/extension/package.json
@@ -2,7 +2,7 @@
     "name": "nab-al-tools",
     "displayName": "NAB AL Tools",
     "description": "Development and translation management tool for AL language and Microsoft Dynamics 365 Business Central extensions.",
-    "version": "1.7.0",
+    "version": "1.7.1-preview.3",
     "publisher": "nabsolutions",
     "repository": {
         "type": "git",
@@ -602,7 +602,7 @@
         "strip-json-comments": "^3.1.1",
         "time-stamp": "^1.1.0",
         "txml": "^4.0.1",
-        "xmldom": "^0.5.0"
+        "@xmldom/xmldom": "^0.7.5"
     },
     "devDependencies": {
         "@types/adm-zip": "^0.4.34",
@@ -625,7 +625,7 @@
         "eslint-plugin-prettier": "3.4.0",
         "glob": "^7.1.7",
         "madge": "^4.0.2",
-        "mocha": "^8.4.0",
+        "mocha": "^9.1.3",
         "prettier": "2.2.1",
         "ts-loader": "^9.1.2",
         "typescript": "^4.2.4",
